[package]
name = "hoff"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.72"
clap = { version = "4.0.29", features = ["derive"] }
current_platform = "0.2.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", features = ["llvm12-0"], branch = "master" }
lazy_static = "1.4.0"
peg = "0.8.1"
regex = "1.7.0"
macros = { path = "./macros" }
itertools = "0.11.0"
rayon = "1.7.0"


[dev-dependencies]
colored = "2.0.4"
indoc = "2.0.0"
rstest = "0.16.0"
similar = "2.2.1"
