[package]
name = "hoff"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
current_platform = "0.2.0"
inkwell = { version = "0.4.0", features = ["llvm12-0"] }
peg = "0.8.2"
regex = "1.10.3"
macros = { path = "./macros" }
itertools = "0.12.1"
rayon = "1.9.0"
once_cell = "1.19.0"
derive_more = "0.99.17"


[dev-dependencies]
colored = "2.1.0"
indoc = "2.0.4"
rstest = "0.18.2"
similar = "2.4.0"
